# ZizkaDB

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONNECT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml
.cursor/: mcp.json.example
.cursor/rules/: authentication-knowledge-base.mdc  backend-dashboard-contract.mdc  core-backend.mdc  dashboard.mdc  email-lifecycle-knowledge-base.mdc  enterprise-page-knowledge-base.mdc  infra-deploy.mdc  project-knowledge-base.mdc  sdk-integrations-mcp.mdc  testing.mdc  zizkadb-complete-overview.mdc  zizkadb-core-api.mdc  zizkadb-dashboard.mdc  zizkadb-infra.mdc  zizkadb-mcp.mdc  zizkadb-project.mdc  zizkadb-sdk-integrations.mdc  zizkadb-testing.mdc
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish-images.yml
core/: CLAUDE.md  README.md  main.py  pytest.ini  requirements-dev.txt  requirements.txt
core/api/: account.py  admin.py  agents.py  auth.py  billing.py  billing_checkout.py  community.py  demo_requests.py  deps.py  events.py  marketing_events.py  marketing_subscriptions.py  memory.py  newsletter.py  outreach.py  promo.py  search.py  settings.py  stats.py  telemetry.py  utils.py
core/db/: connection.py  schema.sql
core/services/: account.py  api_keys.py  auth.py  billing.py  email.py  embedding_config.py  embeddings.py  entitlements.py  event_write.py  exceptions.py  outreach_template.py  plan_limits.py  promo.py  rate_limiter.py
core/tests/: conftest.py  test_api_key_limit_endpoints.py  test_auth_flow.py  test_billing_metadata.py  test_billing_status.py  test_churn_promo.py  test_demo_requests.py  test_email_campaign_overlap.py  test_email_deletion.py  test_email_eligibility.py  test_email_eligibility_welcome.py  test_email_hardening.py  test_email_outbox.py  test_email_processor.py  test_email_service.py  test_email_triggers.py  test_embedding_config.py  test_embeddings.py  test_entitlements.py  test_event_write.py  test_exceptions.py  test_integration_auth.py  test_integration_events.py  test_integration_search.py  test_integration_selfhost.py  test_newsletter.py  test_outreach_template.py  test_plan_limits.py  test_rate_limiting.py  test_search.py  test_secret_fallback_security.py  test_smoke.py  test_tenant_isolation.py  test_unit_memory_helpers.py
core/workers/: email_worker.py
dashboard/: CLAUDE.md  DASHBOARD_KNOWLEDGE_BASE.md  Dockerfile  ecosystem.config.js  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts
dashboard/components/: AgentApiKeys.tsx  ApiKeyUsage.tsx  BrandLogo.tsx  ConnectionStatus.tsx  CookiePrivacyConsent.tsx  DashboardShell.tsx  MarketingSubscribePopup.tsx  SiteNav.tsx  SubscriptionGate.tsx  TenantPlanBanner.tsx  brand.ts
dashboard/hooks/: useApiKeyQuota.ts  useCopyToClipboard.ts  useResendCooldown.ts
dashboard/lib/: api.ts  auth-errors.ts  auth.ts  community.ts  constants.ts  demo.ts  enterprise.ts  marketing-track.ts  marketing.ts  session-cookies.ts  signup-funnel.ts
docs/: DEVELOPER_TECHNICAL_BRIEF.html  DEVELOPER_TECHNICAL_BRIEF.md  REPO_SPLIT.md  email-automation-qa.md  enterprise-page-qa.md  enterprise-product-overview.md  pdf-style.css  staging.md
docs/adr/: 001-causal-lineage-parent-event-id.md  002-dual-write-postgres-qdrant.md  003-billing-stub.md  004-auth-dependency-split.md  005-in-process-rate-limiting.md  README.md
docs/assets/: RECORD_DEMO.md  why-demo.tape
docs/investor/: README.md  (+2 more)
examples/: README.md
infra/: .env.quickstart  .env.staging.example  backup-postgres.sh  backup-qdrant.sh  deploy-dashboard.sh  deploy-production.sh  deploy-selfhost.sh  docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.oss.yml  docker-compose.quickstart.yml  docker-compose.staging.yml  docker-compose.yml  fix-nginx-api-explorer.sh  nginx.conf  nginx.staging.snippet.conf  repair-site.sh  restart-dashboard.sh
integrations/: CLAUDE.md  README.md
integrations/crewai/: README.md  pyproject.toml
integrations/crewai/zizkadb_crewai/: __init__.py  logger.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/zizkadb_langchain/: __init__.py  callbacks.py
mcp/: CLAUDE.md  LICENSE  README.md  pyproject.toml  server.py
mcp/agentdb_mcp/: __init__.py  server.py
mcp/tests/: test_server.py
mcp/zizkadb_mcp/: __init__.py  server.py
scripts/: bootstrap-local.sh  demo-why.py  download-qdrant.sh  generate-readme-assets.py  github-setup.sh  publish-integrations.sh  publish-packages.sh  quickstart-remote.sh  quickstart.sh  reset-local-db.sh  restart-native-stack.sh  seed-support-bot-events.py  setup-local.sh  smoke-test.sh  stop-native-stack.sh  test-e2e-workflow.sh  validate-selfhost-config.sh  verify-release.sh
sdk/python/: CLAUDE.md  README.md  pyproject.toml
sdk/python/agentdb/: __init__.py  client.py  exceptions.py  models.py  telemetry.py
sdk/python/tests/: test_cli.py  test_langchain_callbacks.py
sdk/python/zizkadb/: __init__.py  cli.py  client.py  demo_run.py  exceptions.py  models.py  telemetry.py
sdk/python/zizkadb/integrations/: __init__.py
sdk/python/zizkadb/integrations/crewai/: logger.py
sdk/python/zizkadb/integrations/langchain/: callbacks.py
sdk/python/zizkadb/templates/basic/: .env.example  README.md  agent.py  requirements.txt
sdk/python/zizkadb/templates/crewai/: .env.example  README.md  agent.py  requirements.txt
sdk/python/zizkadb/templates/langchain/: .env.example  requirements.txt
sdk/python/zizkadb/templates/mcp-cursor/: README.md  mcp.json  mcp.local.json
sdk/python/zizkadb/templates/openai/: .env.example  requirements.txt
starters/: README.md
wiki/: Agents-and-API-Keys.md  Architecture.md  Getting-Started.md  Home.md  MCP-and-Cursor.md  Multi-Agent-Apps.md  Production-Deployment.md  Python-SDK.md  README.md  REST-API.md  Self-Hosting.md  Troubleshooting.md  TypeScript-SDK.md  _Sidebar.md  push-wiki.sh
(+141 files in other folders)
