[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zizkadb-mcp"
version = "0.1.3"
description = "MCP server for ZizkaDB — give any AI agent persistent memory and observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Zizka AI", email = "hello@zizka.ai" }]
keywords = ["mcp", "ai", "agents", "memory", "observability", "zizkadb", "claude", "cursor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
zizkadb-mcp = "zizkadb_mcp.server:main"

[project.urls]
Homepage = "https://db.zizka.ai"
Documentation = "https://db.zizka.ai/docs"
Repository = "https://github.com/Zizka-ai/ZizkaDB"

[tool.setuptools.packages.find]
where = ["."]
include = ["zizkadb_mcp*"]
