[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zizkadb-crewai"
version = "0.1.0"
description = "CrewAI logging helpers for ZizkaDB causal agent memory"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "zizkadb-sdk>=0.2.5",
]

[project.urls]
Repository = "https://github.com/Zizka-ai/ZizkaDB"
Documentation = "https://db.zizka.ai/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["zizkadb_crewai*"]
