[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdb-sdk"
version = "0.1.0"
description = "The operational database for AI agents"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
authors = [{ name = "Zizka AI", email = "hello@zizka.ai" }]
keywords = ["ai", "agents", "database", "memory", "llm", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.27.0"]

[project.urls]
Homepage = "https://agentdb.zizka.ai"
Documentation = "https://agentdb.zizka.ai/docs"
Repository = "https://github.com/Zizka-ai/agentdb"
Issues = "https://github.com/Zizka-ai/agentdb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentdb*"]
