[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zizkadb-sdk"
version = "0.2.5"
description = "ZizkaDB tells you when your agent stops behaving like itself. Causal lineage, time travel and behavioral baselines for any AI agent."
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{ name = "Zizka AI", email = "founder@zizka.ai" }]
keywords = ["ai", "agents", "database", "memory", "llm", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["httpx>=0.27.0"]

[project.scripts]
zizkadb = "zizkadb.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://db.zizka.ai"
Documentation = "https://db.zizka.ai/docs"
Repository = "https://github.com/Zizka-ai/ZizkaDB"
Issues = "https://github.com/Zizka-ai/ZizkaDB/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zizkadb*"]

[tool.setuptools.package-data]
zizkadb = ["templates/**/*", "templates/**/.env.example"]
